--- a/menu1.html
+++ b/menu1.html
@@ -9,17 +9,20 @@
     </script>
   </head>
   <body>
-    <div id="">
-    <header class="accueil">
-      <div id="logo">
-        <p>
-          <i class="fas fa-arrow-left"></i>
-          <img src="images\logo\ohmyfood@2x.svg" alt="logos">
-        </p>
-      </div>
-    </header>
+    <div class="accueil">
+      <header>
+        <div id="logo">
+          <p>
+            <a href="ohmyfood.html">
+              <i class="fas fa-arrow-left"></i>
+            </a>
+            <img src="images\logo\ohmyfood@2x.svg" alt="logos">
+          </p>
+        </div>
+      </header>
+    </div>
 
-      <figure class="images">
+      <figure class="images1">
         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat1">
       </figure>
       <section class="compo_menu">
@@ -33,17 +36,24 @@
           </h2>
           
           <ul>
-            <li><h3>Tartare de poulpe acidulé</h3>
-            Aux zests d'orange
+            <li>
+              <div class="liste">
+                <h3>Tartare de poulpe acidulé</h3>
+                Aux zests d'orange <div class="liste liste__icone"><strong>25€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
             </li>
           
             <li>
-            <h3>Velouté de légumes d'antan</h3>
-            Carotte, panais, topinambour
+              <div class="liste">
+                <h3>Velouté de légumes d'antan</h3>
+                Carotte, panais, topinambour <div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
             </li>
             <li>
-            <h3>Soupe à l'oignon</h3>
-            Revisitée
+              <div class="liste">
+                <h3>Soupe à l'oignon</h3>
+                Revisitée <div class="liste liste__icone"><strong>20€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
             </li>
           </ul>
         </div>
@@ -52,59 +62,79 @@
             PLATS
           </h2>
           <ul>
-          <li>
-            Coquilles Saint-Jacques
-          </li>
-          <p>
-            Magret de canard<br/>
-            Et parmentier de pommes de terre 35€
-          </p>
-          <p>
-            Pigeonneau d'Ille-et-Vilaine<br/>
-            Sur son lit de gnocchis aux légumes 44€
-          </p>
-        </ul>
+            <li>
+              <div class="liste">
+                <h3>Coquilles Saint-Jacques</h3>
+                Accompagné d'une purée de panais <div class="liste liste__icone"><strong>40€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+            <li>
+              <div class="liste">
+                <h3>Magret de canard</h3>
+                Et parmentier de pommes de terre <div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+            <li>
+              <div class="liste">
+                <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                Sur son lit de gnocchis aux légumes <div class="liste liste__icone"><strong>44€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+          </ul>
         </div>
         <div class="plats plats__dess">
           <h2>
-
             DESSERTS
           </h2>
-          <p>
-            Pétales de violettes glacés<br/>
-            Et purée de noisettes 18€
-          </p>
-          <p>
-            Fondant au chocolat<br/>
-            Revisité 22€
-          </p>
-          <p>
-            Millefeuille croustillant<br/>
-            Myrtille et pâte d'amande 23€
-          </p>
+          <ul>
+            <li>
+              <div class="liste">
+                <h3>Pétales de violettes glacés</h3>
+                Et purée de noisettes <div class="liste liste__icone"><strong>18€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+            <li>
+              <div class="liste">
+                <h3>Fondant au chocolat</h3>
+                Revisité <div class="liste liste__icone"><strong>22€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+            <li>
+              <div class="liste">
+                <h3>Millefeuille croustillant</h3>
+                Myrtille et pâte d'amande <div class="liste liste__icone"><strong>23€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+          </ul>
         </div>
-        <button>
+        <div class="commande">
+          <button class="principal">
           Commander
         </button>
+      </div>
       </div>
     </section>
 
     <footer>
-      <p>
-        <img src="images\logo\ohmyfood@2x.svg" alt="logo">
-      </p>
-      <p>
-        Proposer un restaurant
-      </p>
-      <p>
-        Devenir partenaire
-      </p>
-      <p>
-        Mentions légales
-      </p>
-      <p>
-        Contact
-      </p>
+      <h1>
+        ohmyfood
+      </h1>
+      <ul>
+        <li>
+          <i class="fas fa-utensils"></i>
+          Proposer un restaurant
+        </li>
+        <li>
+          <i class="fas fa-hands-helping"></i>
+          Devenir partenaire
+        </li>
+        <li>
+          Mentions légales
+        </li>
+        <li>
+          Contact
+        </li>
+    </ul>
     </footer>
 
   </body>
