--- a/menu2.html
+++ b/menu2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr-FR">
   <head>
-    <title>A la française</title>
+    <title>La note enchantée</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale= 1.0">
     <link rel="stylesheet" href="ohmyfood.css">
@@ -9,93 +9,137 @@
     </script>
   </head>
   <body>
+    <div id="">
     <header class="accueil">
       <div id="logo">
         <p>
-          <i class="fas fa-arrow-left"></i>
+          <a href="ohmyfood.html">
+            <i class="fas fa-arrow-left"></i>
+          </a>
           <img src="images\logo\ohmyfood@2x.svg" alt="logos">
         </p>
       </div>
     </header>
 
-      <figure class="images">
-        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat1">
-        <div class="fig">
-          <figcaption>
-            <h1>
-              A la française
-              <i class="fas fa-heart"></i>
-            </h1>
-          </figcaption>
-        </div>
+      <figure class="images1">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat2">
       </figure>
-      <div class="compo_menu">
+      <section class="compo_menu2">
+        <h1>
+          La note enchantée
+          <i class="fas fa-heart" aria-hidden="true"></i>
+        </h1>
+        <div class="plats plats__entrees">
           <h2>
             ENTREES
           </h2>
-          <p>
-            Tartare de poulpe acidulé<br/>
-            Aux zests d'orange
-          </p>
-          <p>
-            Velouté de légumes d'antan<br/>
-            Carotte, panais, topinambour
-          </p>
-          <p>
-            Soupe à l'oignon<br/>
-            Revisitée
-          </p>
+          
+          <ul>
+            <li>
+              <div class="liste">
+                <h3>Ravioles de foie gras</h3>
+                Accompagné de leur crème à la truffe <div class="liste liste__icone"><strong>25€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+          
+            <li>
+              <div class="liste">
+                <h3>Caviar osciètre</h3>
+                Sur blini à la farine de blé noir <di class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></di>
+              </div>
+            </li>
+            <li>
+              <div class="liste">
+                <h3>Homard et espuma de... </h3>
+                Mariné aux zests d'orange <div class="liste liste__icone"><strong>20€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+            <li>
+              <div class="liste">
+                <h3>Foie gras de canard cuit entier</h3>
+                Confiture de figue et pain toasté <div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="plats plats__princ">
           <h2>
             PLATS
           </h2>
-          <p>
-            Coquilles Saint-Jacques<br/>
-            Accompagné d'une purée de panais 40€
-          </p>
-          <p>
-            Magret de canard<br/>
-            Et parmentier de pommes de terre 35€
-          </p>
-          <p>
-            Pigeonneau d'Ille-et-Vilaine<br/>
-            Sur son lit de gnocchis aux légumes 44€
-          </p>
+          <ul>
+            <li>
+              <div class="liste">
+                <h3>Noix de coquilles Saint-Jacques</h3>
+                Sur lit de purée de céleri-rave <div class="liste liste__icone"><strong>40€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+            <li>
+              <div class="liste">
+                <h3>Langoustine poêlée</h3>
+                Purée de patate douce <div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+            <li>
+              <div class="liste">
+                <h3>Mijoté de queue de boeuf</h3>
+                Et riz sauvage aux zests de citron <div class="liste liste__icone"><strong>44€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="plats plats__dess">
           <h2>
             DESSERTS
           </h2>
-          <p>
-            Pétales de violettes glacés<br/>
-            Et purée de noisettes 18€
-          </p>
-          <p>
-            Fondant au chocolat<br/>
-            Revisité 22€
-          </p>
-          <p>
-            Millefeuille croustillant<br/>
-            Myrtille et pâte d'amande 23€
-          </p>
-        <button>
-          Commander
-        </button>
+          <ul>
+            <li>
+              <div class="liste">
+                <h3>Macaron noisette et chocolat</h3>
+              Glace au caramel brun et sel de Guérande<div class="liste liste__icone"><strong>18€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+            <li>
+              <div class="liste">
+                <h3>Baba au rhum revisité</h3>
+                Avec son coulis de citron <div class="liste liste__icone"><strong>22€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+            <li>
+              <div class="liste">
+                <h3>Tarte au citron meringuée</h3>
+              Destructurée <div class="liste liste__icone"><strong>23€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="commande">
+          <button class="principal">
+            Commander
+          </button>
+        </div>
       </div>
+    </section>
 
     <footer>
-      <p>
-        <img src="images\logo\ohmyfood@2x.svg" alt="logo">
-      </p>
-      <p>
+      <h1>
+        ohmyfood
+      </h1>
+      <ul>
+        <li>
+        <i class="fas fa-utensils"></i>
         Proposer un restaurant
-      </p>
-      <p>
-        Devenir partenaire
-      </p>
-      <p>
-        Mentions légales
-      </p>
-      <p>
-        Contact
-      </p>
+        </li>
+        <li>
+          <i class="fas fa-hands-helping"></i>
+          Devenir partenaire
+        </li>
+        <li>
+          Mentions légales
+        </li>
+        <li>
+          Contact
+        </li>
+      </ul>
     </footer>
 
   </body>
