--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -9,136 +9,146 @@
     </script>
   </head>
   <body>
-    <header class="accueil">
-      <div id="logo">
-        <p>
-          <img src="images\logo\ohmyfood@2x.svg" alt="logos">
+    <div id="main">
+      <div class="head">
+        <header class="accueil">
+          <div id="logo">
+            <h1>
+              ohmyfood
+            </h1>
+            <nav>
+              <ul>
+                <li>
+                  <a class="contact" href="#">Nous contacter
+                  </a>
+                </li>
+                <li>
+                  <a class="client" href="#">Devenir client
+                  </a>
+                </li>
+                <li>
+                  <a class="espace" href="#">Mon espace
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </header>
+      </div>
+      <div class="reservation">
+        <p class="localisation">
+          <i class="fas fa-map-marker-alt localisation">
+          </i>
+          Paris, Belleville
         </p>
-        <nav>
-          <ul>
-            <li>
-              <a class="contact" href="#">Nous contacter
-              </a>
-            </li>
-            <li>
-              <a class="client" href="#">Devenir client
-              </a>
-            </li>
-            <li>
-              <a class="espace" href="#">Mon espace
-              </a>
-            </li>
-          </ul>
-        </nav>
+        <div class="contenu">
+          <h1>
+            Réservez le menu qui vous convient
+          </h1>
+          <p class="decouverte">
+            Découvrez des restaurants d'exception, séléctionnés par nos soins.
+          </p>
+          <div class="rest">
+            <button class="principal">
+              Explorer nos restaurants
+            </button>
+          </div>
+        </div>
       </div>
-    </header>
-    <div class="reservation">
-      <p class="localisation">
-        <i class="fas fa-map-marker-alt localisation">
-        </i>
-        Paris, Belleville
-      </p>
-      <h1>
-        Réservez le menu qui vous convient
-      </h1>
-      <p class="decouverte">
-        Découvrez des restaurants d'exception, séléctionnés par nos soins.
-      </p>
-      <button>
-        Explorer nos restaurants
-      </button>
-      
-    </div>
-    <div class="fonctionnement">
+      <div class="fonctionnement">
+          <h1>
+            Fonctionnement
+          </h1>
+        <div class="menu">
+          <button><i class="fas fa-mobile-alt"></i>
+            Choisissez un restaurant
+          </button>
+        </div>
+        <div class="menu">
+          <button><i class="fas fa-list-ul"></i>
+            Composez votre menu
+          </button>
+        </div>
+        <div class="menu">
+          <button><i class="fas fa-store"></i>
+            Dégustez au restaurant
+          </button>
+        </div>
+      </div>
+      <div class="restaurant">
         <h1>
-          Fonctionnement
+          Restaurants
         </h1>
-      <div class="menu">
-        <button><i class="fas fa-mobile-alt"></i>
-          Choisissez un restaurant
-        </button>
+        <figure class="images">
+          <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat3">
+          <figcaption>
+            <h3>
+              <a href="menu1.html">A la française</a>
+              <i class="fas fa-heart"></i>
+            </h3>
+            <p>
+              Cité Rouge
+            </p>
+          </figcaption>
+        </figure>
+        <figure class="images">
+          <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat2">
+          <figcaption>
+            <h3>
+              <a href="menu2.html">La note enchantée</a>
+              <i class="fas fa-heart"></i>
+            </h3>
+            <p>
+              Charonne
+            </p>
+          </figcaption>
+        </figure>
+        <figure class="images">
+          <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat1">
+          <figcaption>
+            <h3>
+              <a href="menu3.htm">La palette du goût</a>
+              <i class="fas fa-heart"></i>
+            </h3>
+            <p>
+              Ménilmontant
+            </p>
+          </figcaption>
+        </figure>
+        <figure class="images">
+          <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat4">
+          <figcaption>
+            <h3>
+              <a href="menu4.html">Les délices des sens</a>
+              <i class="fas fa-heart"></i>
+            </h3>
+            <p>
+              Folie-Méricourt
+            </p>
+          </figcaption>
+        </figure>
       </div>
-      <div class="menu">
-        <button><i class="fas fa-list-ul"></i>
-          Composez votre menu
-        </button>
-      </div>
-      <div class="menu">
-        <button><i class="fas fa-store"></i>
-          Dégustez au restaurant
-        </button>
-      </div>
+      <footer class="pied">
+        <h1>
+          ohmyfood
+        </h1>
+        <ul>
+          <li>
+            <i class="fas fa-utensils"></i>
+            Proposer un restaurant
+          </li>
+          <li>
+            <i class="fas fa-hands-helping"></i>
+            Devenir partenaire
+          </li>
+          <li>
+            Mentions légales
+          </li>
+          <li>
+            Contact
+          </li>
+        </ul>
+      </footer>
     </div>
-    <div class="restaurant">
-      <h1>
-        Restaurants
-      </h1>
-      <figure class="images">
-        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat3">
-        <figcaption>
-          <h3>
-            <a href="menu1.html">A la française</a>
-            <i class="fas fa-heart"></i>
-          </h3>
-          <p>
-            Cité Rouge
-          </p>
-        </figcaption>
-      </figure>
-      <figure class="images">
-        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat2">
-        <figcaption>
-          <h3>
-            <a href="menu2.html">La note enchantée</a>
-            <i class="fas fa-heart"></i>
-          </h3>
-          <p>
-            Charonne
-          </p>
-        </figcaption>
-      </figure>
-      <figure class="images">
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat1">
-        <figcaption>
-          <h3>
-            <a href="menu3.htm">La palette du goût</a>
-            <i class="fas fa-heart"></i>
-          </h3>
-          <p>
-            Ménilmontant
-          </p>
-        </figcaption>
-      </figure>
-      <figure class="images">
-        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat4">
-        <figcaption>
-          <h3>
-            <a href="menu4.html">Les délices des sens</a>
-            <i class="fas fa-heart"></i>
-          </h3>
-          <p>
-            Folie-Méricourt
-          </p>
-        </figcaption>
-      </figure>
-    </div>
-    <footer>
-      <p>
-        <img src="images\logo\ohmyfood@2x.svg" alt="logo">
-      </p>
-      <p>
-        Proposer un restaurant
-      </p>
-      <p>
-        Devenir partenaire
-      </p>
-      <p>
-        Mentions légales
-      </p>
-      <p>
-        Contact
-      </p>
-    </footer>
-
   </body>
 </html>
