--- a/menu1.html
+++ b/menu1.html
@@ -46,7 +46,7 @@
             <li>
               <div class="liste">
                 <h3>Velouté de légumes d'antan</h3>
-                Carotte, panais, topinambour <div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                Carotte, panais, topinambour <div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
