Ajout des animations sur les plats

--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -9,7 +9,10 @@
     </script>
   </head>
   <body>
-    <div id="main">
+    <div class="main">
+      <div class="chargement">
+      
+      </div>
       <div class="head">
         <header class="accueil">
           <div id="logo">
