Ajout des animations sur le spinner

--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -9,10 +9,12 @@
     </script>
   </head>
   <body>
-    <div class="main">
-      <div class="chargement">
-      
+    <div class="chargement">
+      <div class="loader">
+        
       </div>
+    </div>
+    <div class="main">
       <div class="head">
         <header class="accueil">
           <div id="logo">
