Ajout des animations sur le spinner

--- a/menu1.html
+++ b/menu1.html
@@ -39,8 +39,11 @@
             <li>
               <div class="liste">
                 <h3>Tartare de poulpe acidulé</h3>
-                Aux zests d'orange <div class="liste liste__icone"><strong>25€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Aux zests d'orange <strong>25€</strong></p>
               </div>
+              <div class="liste liste__icone"><i class="fas fa-check-circle" aria-hidden="true"></i>
+              </div>
+              
             </li>
           
             <li>
