Ajout des animations coche

--- a/menu1.html
+++ b/menu1.html
@@ -29,6 +29,7 @@
         <h1>
           A la française
           <i class="fas fa-heart" aria-hidden="true"></i>
+          <i class="fas fa-heart like" aria-hidden="true"></i>
         </h1>
         <div class="plats plats__entrees">
           <h2>
@@ -49,13 +50,19 @@
             <li>
               <div class="liste">
                 <h3>Velouté de légumes d'antan</h3>
-                Carotte, panais, topinambour <div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i>
+                <p>Carotte, panais, topinambour<strong>35€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+               <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Soupe à l'oignon</h3>
-                Revisitée <div class="liste liste__icone"><strong>20€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Revisitée <strong>20€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
