--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -48,74 +48,78 @@
           <h1>
             Fonctionnement
           </h1>
-        <div class="menu">
-          <button><i class="fas fa-mobile-alt"></i>
-            Choisissez un restaurant
-          </button>
-        </div>
-        <div class="menu">
-          <button><i class="fas fa-list-ul"></i>
-            Composez votre menu
-          </button>
-        </div>
-        <div class="menu">
-          <button><i class="fas fa-store"></i>
-            Dégustez au restaurant
-          </button>
-        </div>
+          <div class="groupe_menu">
+            <div class="menu">
+              <button><i class="fas fa-mobile-alt"></i>
+                <p>Choisissez un restaurant</p>
+              </button>
+            </div>
+            <div class="menu">
+              <button><i class="fas fa-list-ul"></i>
+                <p>Composez votre menu</p>
+              </button>
+            </div>
+            <div class="menu">
+              <button><i class="fas fa-store"></i>
+                <p>Dégustez au restaurant</p>
+              </button>
+            </div>
+          </div>
       </div>
       <div class="restaurant">
         <h1>
           Restaurants
         </h1>
-        <figure class="images">
-          <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat3">
-          <figcaption>
-            <h3>
-              <a href="menu1.html">A la française</a>
-              <i class="fas fa-heart"></i>
-            </h3>
-            <p>
-              Cité Rouge
-            </p>
-          </figcaption>
-        </figure>
-        <figure class="images">
-          <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat2">
-          <figcaption>
-            <h3>
-              <a href="menu2.html">La note enchantée</a>
-              <i class="fas fa-heart"></i>
-            </h3>
-            <p>
-              Charonne
-            </p>
-          </figcaption>
-        </figure>
-        <figure class="images">
-          <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat1">
-          <figcaption>
-            <h3>
-              <a href="menu3.htm">La palette du goût</a>
-              <i class="fas fa-heart"></i>
-            </h3>
-            <p>
-              Ménilmontant
-            </p>
-          </figcaption>
-        </figure>
-        <figure class="images">
-          <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat4">
-          <figcaption>
-            <h3>
-              <a href="menu4.html">Les délices des sens</a>
-              <i class="fas fa-heart"></i>
-            </h3>
-            <p>
-              Folie-Méricourt
-            </p>
-          </figcaption>
-        </figure>
+        <div class="groupe_images">
+          <figure class="images">
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat3">
+            <figcaption>
+              <h3>
+                <a href="menu1.html">A la française</a>
+                <i class="fas fa-heart"></i>
+              </h3>
+              <p>
+                Cité Rouge
+              </p>
+            </figcaption>
+          </figure>
+          <figure class="images">
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat2">
+            <figcaption>
+              <h3>
+                <a href="menu2.html">La note enchantée</a>
+                <i class="fas fa-heart"></i>
+              </h3>
+              <p>
+                Charonne
+              </p>
+            </figcaption>
+          </figure>
+          <figure class="images">
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat1">
+            <figcaption>
+              <h3>
+                <a href="menu3.htm">La palette du goût</a>
+                <i class="fas fa-heart"></i>
+              </h3>
+              <p>
+                Ménilmontant
+              </p>
+            </figcaption>
+          </figure>
+          <figure class="images">
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat4">
+            <figcaption>
+              <h3>
+                <a href="menu4.html">Les délices des sens</a>
+                <i class="fas fa-heart"></i>
+              </h3>
+              <p>
+                Folie-Méricourt
+              </p>
+            </figcaption>
+          </figure>
+        </div>
       </div>
       <footer class="pied">
         <h1>
