--- a/menu2.html
+++ b/menu2.html
@@ -38,26 +38,38 @@
             <li>
               <div class="liste">
                 <h3>Ravioles de foie gras</h3>
-                Accompagné de leur crème à la truffe <div class="liste liste__icone"><strong>25€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Accompagné de leur crème à la truffe <strong>25€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           
             <li>
               <div class="liste">
                 <h3>Caviar osciètre</h3>
-                Sur blini à la farine de blé noir <di class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></di>
+                <p>Sur blini à la farine de blé noir <strong>35€</strong></p>
               </div>
+              <di class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
+              </di>
             </li>
             <li>
               <div class="liste">
                 <h3>Homard et espuma de... </h3>
-                Mariné aux zests d'orange <div class="liste liste__icone"><strong>20€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                Mariné aux zests d'orange <strong>20€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Foie gras de canard cuit entier</h3>
-                Confiture de figue et pain toasté <div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                Confiture de figue et pain toasté <strong>35€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
@@ -70,19 +82,28 @@
             <li>
               <div class="liste">
                 <h3>Noix de coquilles Saint-Jacques</h3>
-                Sur lit de purée de céleri-rave <div class="liste liste__icone"><strong>40€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                Sur lit de purée de céleri-rave <strong>40€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Langoustine poêlée</h3>
-                Purée de patate douce <div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Purée de patate douce <strong>35€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Mijoté de queue de boeuf</h3>
-                Et riz sauvage aux zests de citron <div class="liste liste__icone"><strong>44€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Et riz sauvage aux zests de citron <strong>44€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
@@ -95,19 +116,28 @@
             <li>
               <div class="liste">
                 <h3>Macaron noisette et chocolat</h3>
-              Glace au caramel brun et sel de Guérande<div class="liste liste__icone"><strong>18€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+              <p>Glace au caramel brun et sel de Guérande<strong>18€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Baba au rhum revisité</h3>
-                Avec son coulis de citron <div class="liste liste__icone"><strong>22€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Avec son coulis de citron <strong>22€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Tarte au citron meringuée</h3>
-              Destructurée <div class="liste liste__icone"><strong>23€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Destructurée <strong>23€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
