--- a/menu4.html
+++ b/menu4.html
@@ -38,20 +38,29 @@
             <li>
               <div class="liste">
                 <h3>Tartare de thon</h3>
-                Assaionnné au yuzu<div class="liste liste__icone"><strong>25€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Assaionnné au yuzu<strong>25€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           
             <li>
               <div class="liste">
                 <h3>Bouchée de homard croustillant</h3>
-                Et sa farandole de petits légumes<div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Et sa farandole de petits légumes<strong>35€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Velouté de cèpes</h3>
-                Aux truffes<div class="liste liste__icone"><strong>20€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Aux truffes<strong>20€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
@@ -64,19 +73,28 @@
             <li>
               <div class="liste">
                 <h3>Poulet rôti aux herbes de provence</h3>
-                Et sa crème de truffe<div class="liste liste__icone"><strong>40€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Et sa crème de truffe<strong>40€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Langouste rôtie</h3>
-                Et ses légumes de saison<div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Et ses légumes de saison<strong>35€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Côte de boeuf angus</h3>
-                Et sa purée de panais<div class="liste liste__icone"><strong>44€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Et sa purée de panais<strong>44€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
@@ -89,19 +107,28 @@
             <li>
               <div class="liste">
                 <h3>Farandole de desserts</h3>
-                Du chef<div class="liste liste__icone"><strong>18€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Du chef<strong>18€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Crème brulée</h3>
-                Revisité <div class="liste liste__icone"><strong>22€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Revisité <strong>22€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Tiramisu</h3>
-                A la noisette<div class="liste liste__icone"><strong>23€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>A la noisette<strong>23€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
