--- a/menu1.html
+++ b/menu1.html
@@ -75,19 +75,28 @@
             <li>
               <div class="liste">
                 <h3>Coquilles Saint-Jacques</h3>
-                Accompagné d'une purée de panais <div class="liste liste__icone"><strong>40€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Accompagné d'une purée de panais <strong>40€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Magret de canard</h3>
-                Et parmentier de pommes de terre <div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Et parmentier de pommes de terre <strong>35€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                Sur son lit de gnocchis aux légumes <div class="liste liste__icone"><strong>44€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Sur son lit de gnocchis aux légumes <strong>44€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
@@ -100,19 +109,28 @@
             <li>
               <div class="liste">
                 <h3>Pétales de violettes glacés</h3>
-                Et purée de noisettes <div class="liste liste__icone"><strong>18€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Et purée de noisettes <strong>18€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Fondant au chocolat</h3>
-                Revisité <div class="liste liste__icone"><strong>22€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Revisité <strong>22€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Millefeuille croustillant</h3>
-                Myrtille et pâte d'amande <div class="liste liste__icone"><strong>23€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+               <p> Myrtille et pâte d'amande <strong>23€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
