--- a/menu3.html
+++ b/menu3.html
@@ -38,20 +38,29 @@
             <li>
               <div class="liste">
                 <h3>Fricassé d'escargot</h3>
-                Au piment d'espelette<div class="liste liste__icone"><strong>25€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Au piment d'espelette<strong>25€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           
             <li>
               <div class="liste">
                 <h3>Foie gras de canard mi-cuit</h3>
-                Et ses copeaux de truffe noire<div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Et ses copeaux de truffe noire<strong>35€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Oeuf au plat</h3>
-                Assaisonné à la truffe sur de<div class="liste liste__icone"><strong>20€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Assaisonné à la truffe sur de<strong>20€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
@@ -64,19 +73,28 @@
             <li>
               <div class="liste">
                 <h3>Filet de boeuf aux herbes</h3>
-                Accompagné de sa ribmbelle de légumes<div class="liste liste__icone"><strong>40€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Accompagné de sa ribmbelle de légumes<strong>40€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Parmentier de queue de boeuf</h3>
-                A la truffe noire sur sa purée de panais<div class="liste liste__icone"><strong>35€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>A la truffe noire sur sa purée de panais<strong>35€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Filet de Turbot</h3>
-                Aux agrumes<div class="liste liste__icone"><strong>44€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Aux agrumes<strong>44€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
@@ -89,19 +107,28 @@
             <li>
               <div class="liste">
                 <h3>Pétales de violettes glacés</h3>
-                Et purée de noisettes <div class="liste liste__icone"><strong>18€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Et purée de noisettes <strong>18€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Fondant au chocolat</h3>
-                Revisité <div class="liste liste__icone"><strong>22€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Revisité <strong>22€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
             <li>
               <div class="liste">
                 <h3>Millefeuille croustillant</h3>
-                Myrtille et pâte d'amande <div class="liste liste__icone"><strong>23€</strong><i class="fas fa-check-circle" aria-hidden="true"></i></div>
+                <p>Myrtille et pâte d'amande <strong>23€</strong></p>
+              </div>
+              <div class="liste liste__icone">
+                <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
           </ul>
