--- a/menu1.html
+++ b/menu1.html
@@ -28,8 +28,10 @@
       <section class="compo_menu">
         <h1>
           A la française
-          <i class="fas fa-heart" aria-hidden="true"></i>
-          <i class="fas fa-heart like" aria-hidden="true"></i>
+          <span>
+            <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
+            <i class="plein fas fa-heart"></i>
+          </span>
         </h1>
         <div class="plats plats__entrees">
           <h2>
