--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -49,18 +49,18 @@
             Fonctionnement
           </h1>
           <div class="groupe_menu">
-            <div class="menu">
-              <button><i class="fas fa-mobile-alt"></i>
+            <div class="menu">         
+              <button><div class="chiffre">1</div><i class="fas fa-mobile-alt"></i>
                 <p>Choisissez un restaurant</p>
               </button>
             </div>
             <div class="menu">
-              <button><i class="fas fa-list-ul"></i>
+              <button><div class="chiffre">2</div><i class="fas fa-list-ul"></i>
                 <p>Composez votre menu</p>
               </button>
             </div>
             <div class="menu">
-              <button><i class="fas fa-store"></i>
+              <button><div class="chiffre">3</div><i class="fas fa-store"></i>
                 <p>Dégustez au restaurant</p>
               </button>
             </div>
@@ -76,7 +76,10 @@
             <figcaption>
               <h3>
                 <a href="menu1.html">A la française</a>
-                <i class="fas fa-heart"></i>
+                <span>
+                  <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
+                  <i class="plein fas fa-heart"></i>
+                </span>
               </h3>
               <p>
                 Cité Rouge
@@ -88,7 +91,10 @@
             <figcaption>
               <h3>
                 <a href="menu2.html">La note enchantée</a>
-                <i class="fas fa-heart"></i>
+                <span>
+                  <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
+                  <i class="plein fas fa-heart"></i>
+                </span>
               </h3>
               <p>
                 Charonne
@@ -100,7 +106,10 @@
             <figcaption>
               <h3>
                 <a href="menu3.htm">La palette du goût</a>
-                <i class="fas fa-heart"></i>
+                <span>
+                  <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
+                  <i class="plein fas fa-heart"></i>
+                </span>
               </h3>
               <p>
                 Ménilmontant
@@ -112,7 +121,10 @@
             <figcaption>
               <h3>
                 <a href="menu4.html">Les délices des sens</a>
-                <i class="fas fa-heart"></i>
+                <span>
+                  <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
+                  <i class="plein fas fa-heart"></i>
+                </span>
               </h3>
               <p>
                 Folie-Méricourt
