--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -72,37 +72,8 @@
         </h1>
         <div class="groupe_images">
           <figure class="images">
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat3">
-            <figcaption>
-              <h3>
-                <a href="menu1.html">A la française</a>
-                <span>
-                  <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
-                  <i class="plein fas fa-heart"></i>
-                </span>
-              </h3>
-              <p>
-                Cité Rouge
-              </p>
-            </figcaption>
-          </figure>
-          <figure class="images">
-            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat2">
-            <figcaption>
-              <h3>
-                <a href="menu2.html">La note enchantée</a>
-                <span>
-                  <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
-                  <i class="plein fas fa-heart"></i>
-                </span>
-              </h3>
-              <p>
-                Charonne
-              </p>
-            </figcaption>
-          </figure>
-          <figure class="images">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat1">
+            <div class="nouveau">Nouveau</div>
             <figcaption>
               <h3>
                 <a href="menu3.htm">La palette du goût</a>
@@ -117,10 +88,41 @@
             </figcaption>
           </figure>
           <figure class="images">
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat3">
+            <div class="nouveau">Nouveau</div>
+            <figcaption>
+              <h3>
+                <a href="menu1.html">La note enchantée</a>
+                <span>
+                  <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
+                  <i class="plein fas fa-heart"></i>
+                </span>
+              </h3>
+              <p>
+                Charonne
+              </p>
+            </figcaption>
+          </figure>
+          <figure class="images">
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat4">
             <figcaption>
               <h3>
-                <a href="menu4.html">Les délices des sens</a>
+                <a href="menu4.html">A la française</a>
+                <span>
+                  <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
+                  <i class="plein fas fa-heart"></i>
+                </span>
+              </h3>
+              <p>
+                Cité rouge
+              </p>
+            </figcaption>
+          </figure>
+          <figure class="images">
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat2">
+            <figcaption>
+              <h3>
+                <a href="menu2.html">Les délices des sens</a>
                 <span>
                   <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
                   <i class="plein fas fa-heart"></i>
