--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -152,7 +152,7 @@
             Mentions légales
           </li>
           <li>
-            Contact
+            <a href="mailto:ohmyfood@restaurant.com">Contact</a>
           </li>
         </ul>
       </footer>
