correction barre horizontale

--- a/menu4.html
+++ b/menu4.html
@@ -9,14 +9,14 @@
     </script>
   </head>
   <body>
-    <div id="">
-    <header class="accueil">
+    <div class="accueil">
+    <header>
       <div id="logo">
         <p>
           <a href="ohmyfood.html">
             <i class="fas fa-arrow-left"></i>
           </a>
-          <img src="images\logo\ohmyfood@2x.svg" alt="logos">
+          <img src="images/logo/ohmyfood@2x.svg" alt="logos">
         </p>
       </div>
     </header>
@@ -27,7 +27,10 @@
       <section class="compo_menu">
         <h1>
           Le délice des sens
-          <i class="fas fa-heart" aria-hidden="true"></i>
+          <span>
+            <i class=" vide far fa-heart" aria-hidden="true"></i>
+            <i class="plein fas fa-heart"></i>
+          </span>
         </h1>
         <div class="plats plats__entrees">
           <h2>
@@ -158,7 +161,7 @@
           Mentions légales
         </li>
         <li>
-          Contact
+          <a href="mailto:ohmyfood@restaurant.com">Contact</a>
         </li>
       </ul>
     </footer>
