--- a/menu3.html
+++ b/menu3.html
@@ -1,63 +1,67 @@
 <!DOCTYPE html>
 <html lang="fr-FR">
-  <head>
-    <title>La palette du goût</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale= 1.0">
-    <link rel="stylesheet" href="ohmyfood.css">
-    <script src="https://kit.fontawesome.com/ac1332d8b9.js" crossorigin="anonymous">
-    </script>
-  </head>
-  <body>
-    <div id="">
-    <header class="accueil">
+
+<head>
+  <title>A la française</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale= 1.0">
+  <link rel="stylesheet" href="ohmyfood.css">
+  <script src="https://kit.fontawesome.com/ac1332d8b9.js" crossorigin="anonymous">
+  </script>
+</head>
+
+<body>
+  <div class="accueil">
+    <header>
       <div id="logo">
         <p>
           <a href="ohmyfood.html">
             <i class="fas fa-arrow-left"></i>
           </a>
-          <img src="images\logo\ohmyfood@2x.svg" alt="logos">
+          <img src="images/logo/ohmyfood@2x.svg" alt="logos">
         </p>
       </div>
     </header>
+  </div>
 
-      <figure class="images1">
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat3">
-      </figure>
-      <section class="compo_menu">
-        <h1>
-          La palette du goût
-          <i class="fas fa-heart" aria-hidden="true"></i>
-        </h1>
+  <figure class="images1">
+    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat1">
+  </figure>
+  <section class="compo_menu">
+    <h1> A la française
+      <span>
+        <i class="vide far fa-heart"></i>
+        <i class="plein fas fa-heart"></i>
+      </span>
+    </h1>
+    <div class="groupe_plats">
         <div class="plats plats__entrees">
           <h2>
             ENTREES
           </h2>
-          
+
           <ul>
             <li>
               <div class="liste">
-                <h3>Fricassé d'escargot</h3>
-                <p>Au piment d'espelette<strong>25€</strong></p>
+                <h3>Tartare de poulpe acidulé</h3>
+                <p>Aux zests d'orange <strong>25€</strong></p>
+              </div>
+              <div class="liste liste__icone"><i class="fas fa-check-circle" aria-hidden="true"></i>
+              </div>
+            </li>
+            <li>
+              <div class="liste">
+                <h3>Velouté de légumes d'antan</h3>
+                <p>Carotte, panais, topinambour<strong>35€</strong></p>
               </div>
               <div class="liste liste__icone">
                 <i class="fas fa-check-circle" aria-hidden="true"></i>
               </div>
             </li>
-          
             <li>
               <div class="liste">
-                <h3>Foie gras de canard mi-cuit</h3>
-                <p>Et ses copeaux de truffe noire<strong>35€</strong></p>
-              </div>
-              <div class="liste liste__icone">
-                <i class="fas fa-check-circle" aria-hidden="true"></i>
-              </div>
-            </li>
-            <li>
-              <div class="liste">
-                <h3>Oeuf au plat</h3>
-                <p>Assaisonné à la truffe sur de<strong>20€</strong></p>
+                <h3>Soupe à l'oignon</h3>
+                <p>Revisitée <strong>20€</strong></p>
               </div>
               <div class="liste liste__icone">
                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -72,8 +76,8 @@
           <ul>
             <li>
               <div class="liste">
-                <h3>Filet de boeuf aux herbes</h3>
-                <p>Accompagné de sa ribmbelle de légumes<strong>40€</strong></p>
+                <h3>Coquilles Saint-Jacques</h3>
+                <p>Accompagné d'une purée de panais <strong>40€</strong></p>
               </div>
               <div class="liste liste__icone">
                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -81,8 +85,8 @@
             </li>
             <li>
               <div class="liste">
-                <h3>Parmentier de queue de boeuf</h3>
-                <p>A la truffe noire sur sa purée de panais<strong>35€</strong></p>
+                <h3>Magret de canard</h3>
+                <p>Et parmentier de pommes de terre <strong>35€</strong></p>
               </div>
               <div class="liste liste__icone">
                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -90,8 +94,8 @@
             </li>
             <li>
               <div class="liste">
-                <h3>Filet de Turbot</h3>
-                <p>Aux agrumes<strong>44€</strong></p>
+                <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                <p>Sur son lit de gnocchis aux légumes <strong>44€</strong></p>
               </div>
               <div class="liste liste__icone">
                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -125,7 +129,7 @@
             <li>
               <div class="liste">
                 <h3>Millefeuille croustillant</h3>
-                <p>Myrtille et pâte d'amande <strong>23€</strong></p>
+                <p> Myrtille et pâte d'amande <strong>23€</strong></p>
               </div>
               <div class="liste liste__icone">
                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -133,35 +137,36 @@
             </li>
           </ul>
         </div>
-        <div class="commande">
-          <button class="principal">
-            Commander
-          </button>
-        </div>
-        </div>
-    </section>
+    </div>
+      <div class="commande">
+        <button class="principal">
+          Commander
+        </button>
+      </div>
+  </section>
 
-    <footer class="pied">
-      <h1>
-        ohmyfood
-      </h1>
-      <ul>
-        <li>
-          <i class="fas fa-utensils"></i>
-          Proposer un restaurant
-        </li>
-        <li>
-          <i class="fas fa-hands-helping"></i>
-          Devenir partenaire
-        </li>
-        <li>
-          Mentions légales
-        </li>
-        <li>
-          Contact
-        </li>
-      </ul>
-    </footer>
+  <footer class="pied">
+    <h1>
+      ohmyfood
+    </h1>
+    <ul>
+      <li>
+        <i class="fas fa-utensils"></i>
+        Proposer un restaurant
+      </li>
+      <li>
+        <i class="fas fa-hands-helping"></i>
+        Devenir partenaire
+      </li>
+      <li>
+        Mentions légales
+      </li>
+      <li>
+        <a href="mailto:ohmyfood@restaurant.com">Contact</a>
+      </li>
+    </ul>
+  </footer>
 
-  </body>
+</body>
+
 </html>
