--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -49,19 +49,22 @@
             Fonctionnement
           </h1>
           <div class="groupe_menu">
-            <div class="menu">         
-              <button><div class="chiffre">1</div><i class="fas fa-mobile-alt"></i>
-                <p>Choisissez un restaurant</p>
+            <div class="menu">
+              <div class="chiffre">1</div>         
+              <button><i class="fas fa-mobile-alt"></i>
+                Choisissez un restaurant
               </button>
             </div>
             <div class="menu">
-              <button><div class="chiffre">2</div><i class="fas fa-list-ul"></i>
-                <p>Composez votre menu</p>
+              <div class="chiffre">2</div>
+              <button><i class="fas fa-list-ul"></i>
+                Composez votre menu
               </button>
             </div>
             <div class="menu">
-              <button><div class="chiffre">3</div><i class="fas fa-store"></i>
-                <p>Dégustez au restaurant</p>
+              <div class="chiffre">3</div>
+              <button><i class="fas fa-store"></i>
+                Dégustez au restaurant
               </button>
             </div>
           </div>
@@ -76,7 +79,7 @@
             <div class="nouveau">Nouveau</div>
             <figcaption>
               <h3>
-                <a href="menu3.htm">La palette du goût</a>
+                <a href="menu1.html">La palette du goût</a>
                 <span>
                   <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
                   <i class="plein fas fa-heart"></i>
@@ -88,11 +91,11 @@
             </figcaption>
           </figure>
           <figure class="images">
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat3">
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat2">
             <div class="nouveau">Nouveau</div>
             <figcaption>
               <h3>
-                <a href="menu1.html">La note enchantée</a>
+                <a href="menu2.html">La note enchantée</a>
                 <span>
                   <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
                   <i class="plein fas fa-heart"></i>
@@ -104,10 +107,10 @@
             </figcaption>
           </figure>
           <figure class="images">
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat4">
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat3">
             <figcaption>
               <h3>
-                <a href="menu4.html">A la française</a>
+                <a href="menu3.html">A la française</a>
                 <span>
                   <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
                   <i class="plein fas fa-heart"></i>
@@ -119,10 +122,10 @@
             </figcaption>
           </figure>
           <figure class="images">
-            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat2">
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat4">
             <figcaption>
               <h3>
-                <a href="menu2.html">Les délices des sens</a>
+                <a href="menu4.html">Les délices des sens</a>
                 <span>
                   <i class=" vide fa fa-heart-o" aria-hidden="true"></i>
                   <i class="plein fas fa-heart"></i>
