correction des erreurs html et css

--- a/menu4.html
+++ b/menu4.html
@@ -135,8 +135,8 @@
               </div>
             </li>
           </ul>
-        </div class="commande">
-        <div>
+        </div>
+        <div class="commande">
           <button class="principal">
             Commander
           </button>
