correction des erreurs

--- a/menu2.html
+++ b/menu2.html
@@ -62,7 +62,7 @@
               <li>
                 <div class="liste">
                   <h3>Homard et espuma de... </h3>
-                  Mariné aux zests d'orange <strong>20€</strong></p>
+                  <p>Mariné aux zests d'orange <strong>20€</strong></p>
                 </div>
                 <div class="liste liste__icone">
                   <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -87,7 +87,7 @@
               <li>
                 <div class="liste">
                   <h3>Noix de coquilles Saint-Jacques</h3>
-                  Sur lit de purée de céleri-rave <strong>40€</strong></p>
+                  <p>Sur lit de purée de céleri-rave <strong>40€</strong></p>
                 </div>
                 <div class="liste liste__icone">
                   <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -121,7 +121,7 @@
               <li>
                 <div class="liste">
                   <h3>Macaron noisette et chocolat</h3>
-                <p>Glace au caramel brun et sel de Guérande<strong>18€</strong></p>
+                  <p>Glace au caramel brun et sel de Guérande<strong>18€</strong></p>
                 </div>
                 <div class="liste liste__icone">
                   <i class="fas fa-check-circle" aria-hidden="true"></i>
