--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -74,9 +74,11 @@
           Restaurants
         </h1>
         <div class="groupe_images">
-          <figure class="images">
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat1">
-            <div class="nouveau">Nouveau</div>
+          <figure class="images m1">
+            <a href="menu1.html">
+              <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat1">
+              <div class="nouveau">Nouveau</div>
+            </a>
             <figcaption>
               <h3>
                 <a href="menu1.html">La palette du goût</a>
@@ -86,13 +88,16 @@
                 </span>
               </h3>
               <p>
-                Ménilmontant
+                <a href="menu1.html">Ménilmontant</a>
               </p>
+              </a>
             </figcaption>
           </figure>
-          <figure class="images">
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat2">
-            <div class="nouveau">Nouveau</div>
+          <figure class="images m2">
+            <a href="menu2.html">
+              <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat2">
+              <div class="nouveau">Nouveau</div>
+            </a>
             <figcaption>
               <h3>
                 <a href="menu2.html">La note enchantée</a>
@@ -102,12 +107,14 @@
                 </span>
               </h3>
               <p>
-                Charonne
+                <a href="menu2.html">Charonne</a>
               </p>
             </figcaption>
           </figure>
-          <figure class="images">
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat3">
+          <figure class="images m3">
+            <a href="menu3.html">
+              <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat3">
+            </a>
             <figcaption>
               <h3>
                 <a href="menu3.html">A la française</a>
@@ -117,12 +124,14 @@
                 </span>
               </h3>
               <p>
-                Cité rouge
+                <a href="menu3.html">Cité rouge</a>
               </p>
             </figcaption>
           </figure>
-          <figure class="images">
-            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat4">
+          <figure class="images m4">
+            <a href="menu4.html">
+              <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat4">
+            </a>
             <figcaption>
               <h3>
                 <a href="menu4.html">Les délices des sens</a>
@@ -132,7 +141,7 @@
                 </span>
               </h3>
               <p>
-                Folie-Méricourt
+                <a href="menu4.html">Folie-Méricourt</a>
               </p>
             </figcaption>
           </figure>
